WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
69749
[GTK] GtkAuthenticationDialog: use GtkGrid instead of GtkTable
https://bugs.webkit.org/show_bug.cgi?id=69749
Summary
[GTK] GtkAuthenticationDialog: use GtkGrid instead of GtkTable
Philippe Normand
Reported
2011-10-10 03:18:27 PDT
GtkTable has been deprecated in GTK+3.
Attachments
[GTK] GtkAuthenticationDialog: use GtkGrid instead of GtkTable https://bugs.webkit.org/show_bug.cgi?id=69749
(5.03 KB, patch)
2011-10-11 09:11 PDT
,
Claudio Saavedra
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Claudio Saavedra
Comment 1
2011-10-11 09:11:40 PDT
Created
attachment 110521
[details]
[GTK] GtkAuthenticationDialog: use GtkGrid instead of GtkTable
https://bugs.webkit.org/show_bug.cgi?id=69749
Reviewed by NOBODY (OOPS!). * platform/gtk/GtkAuthenticationDialog.cpp: (WebCore::addEntryToGrid): Migrate to GtkGrid when using GTK+ 3 (WebCore::GtkAuthenticationDialog::GtkAuthenticationDialog): Ditto.
Martin Robinson
Comment 2
2011-10-11 09:54:35 PDT
Comment on
attachment 110521
[details]
[GTK] GtkAuthenticationDialog: use GtkGrid instead of GtkTable
https://bugs.webkit.org/show_bug.cgi?id=69749
Hopefully this will look better once we remove GTK+ support. :)
WebKit Review Bot
Comment 3
2011-10-11 10:16:03 PDT
Comment on
attachment 110521
[details]
[GTK] GtkAuthenticationDialog: use GtkGrid instead of GtkTable
https://bugs.webkit.org/show_bug.cgi?id=69749
Clearing flags on attachment: 110521 Committed
r97161
: <
http://trac.webkit.org/changeset/97161
>
WebKit Review Bot
Comment 4
2011-10-11 10:16:07 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug