[GTK] GtkAuthenticationDialog: use GtkGrid instead of GtkTable https://bugs.webkit.org/show_bug.cgi?id=69749

Patch by Claudio Saavedra <csaavedra@igalia.com> on 2011-10-11
Reviewed by Martin Robinson.

* platform/gtk/GtkAuthenticationDialog.cpp:
(WebCore::addEntryToGrid): Migrate to GtkGrid when using GTK+ 3
(WebCore::GtkAuthenticationDialog::GtkAuthenticationDialog):
Ditto.

Canonical link: https://commits.webkit.org/85895@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@97161 268f45cc-cd09-0410-ab3c-d52691b4dbfc